Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
     rather than restricting itself to two slits of the same width.
 \end{abstract}
 
-Word count: 3731 (excluding appendices)
+Word count: 3747 (excluding appendices)
 
 \pagebreak
 \tableofcontents
@@ -533,7 +533,7 @@ The results above seem to support this.
 \section{Accounting for diffraction}
 \label{section:accounting-for-diffraction}
 
-The intensity formula from \eqref{eq:expression-for-intensity} derived in \sectionref{section:intensity-formula} only accounts for interference between the waves. It assumes the waves travel as plane waves from the source to the slits, and then spread out like a point source at the slits. In fact, as long as the wavelength is as large or larger than the slit widths, then there will be a diffraction pattern as well. As discussed in \sectionref{section:intensity-formula}, if the wavelength is much larger than the slit widths, the effects of diffraction can be ignored. We will not attempt to extend our theory to account for diffraction as well.
+The intensity formula from \eqref{eq:expression-for-intensity} derived in \sectionref{section:intensity-formula} only accounts for interference between the waves. It assumes the waves travel as plane waves from the source to the slits, and then spread out like a point source at the slits. In fact, as long as the wavelength is as large or larger than the slit widths, then there will be a diffraction pattern as well. As discussed in \sectionref{section:intensity-formula}, if the wavelength is much larger than the slit widths, the effects of diffraction can be ignored. We will not attempt to extend our theory to account for diffraction as well, in hopes that a diffraction-including model will agree with the experimental data also for small wavelengths.
 
 Huygen’s principle \parencite{huygens-principle} states that to explain diffraction, we may assume that when a wave undergoes diffraction, every point on the wavefront
 acts as a circular point source; so there will be infinitely many circular point
@@ -855,5 +855,6 @@ Below are the plots for the diffraction-including model from \sectionref{section
 \pagebreak
 
 \end{appendices}
+
 
 \end{document}
